# taiko-fee-analysis

./: .eslintrc.js  .gitignore  .prettierrc  AUTHORITATIVE_SPECIFICATION.md  BREAKTHROUGH_SUMMARY.md  CLAUDE.md  CNAME  COMPREHENSIVE_JS_ANALYSIS.js  CORRECTED_CHEAPEST_ANALYSIS.js  CORRECTED_IMPACT_ANALYSIS.js  CORRECTED_PRESETS.js  CRITICAL_ADDITIONAL_BUGS.md  CRITICAL_BUG_REPORT.md  CRITICAL_FINDINGS.md  CROSS_IMPLEMENTATION_VALIDATION.js  DATA_MANAGEMENT.md  DEBUG_ACTUAL_GAS_CALC.js  DEBUG_GAS_CALC.js  DEBUG_L1_BASEFEE.js  EMERGENCY_REANALYSIS.js  FINAL_CONSISTENCY_SUMMARY.md  FINAL_REANALYSIS.js  FINAL_WEB_UPGRADE_STATUS.md  INVESTIGATE_FEE_DISCREPANCY.js  PARAMETER_CALIBRATION_STATUS.md  PROGRESS_BAR_IMPROVEMENTS.md  QUICKSTART.md  QUICK_CORRECTED_TEST.js  README.md  RESEARCH_MEMO.md  SCIENTIFIC_CORRECTIONS_SUMMARY.md  STAKEHOLDER_OPTIMIZATION_REPORT.md  SUMMARY.md  TESTING.md  TEST_NU_ZERO.js  TEST_SIMULATOR_INIT.js  ULTIMATE_REANALYSIS.js  UNIT_CONVENTIONS.md  VERIFY_CONSISTENCY_FIXES.js  VERIFY_FIXES.js  (+69 more)
analysis/: OPTIMAL_PARAMETERS_SUMMARY.md  comprehensive_parameter_analysis.py  cross_validate_presets.py  optimal_parameters_analysis.py  update_notebooks_timing_fix.py
data/: README.md
docs/: README.md
notebooks/: taiko_fee_analysis.ipynb
python/: README.md  pyproject.toml
python/alpha_data/: __init__.py  alpha_calculator.py  taiko_da_fetcher.py  validation.py
python/specs_implementation/: __init__.py
python/specs_implementation/core/: __init__.py  fee_controller.py  l1_cost_smoother.py  simulation_engine.py  units.py  validation.py  vault_dynamics.py
python/specs_implementation/data/: __init__.py  loader.py
python/specs_implementation/metrics/: __init__.py  calculator.py  constraints.py  objectives.py
python/specs_implementation/tests/: __init__.py  test_fee_controller.py  test_integration_golden.py  test_l1_cost_smoother.py  test_simulation_engine.py  test_unit_safety.py  test_vault_dynamics.py
python/taiko_fee/: README.md  __init__.py
python/taiko_fee/analysis/: comprehensive_optimization.py  comprehensive_revised_optimization.py  mechanism_metrics.py  objective_functions.py  revised_optimization.py  validation_framework.py
python/taiko_fee/core/: fee_mechanism_simulator.py
python/taiko_fee/data/: __init__.py  rpc_data_fetcher.py
python/taiko_fee/data/validators/: contiguity_analyzer.py
python/taiko_fee/scripts/: __init__.py  analyze_data_contiguity.py  fetch_contiguous_data.py  fetch_ethereum_blocks.py
research/: README.md
src/: __init__.py  demo_constraint_optimization.py  test_constraint_optimization.py
web/: README.md  alpha_deployment_test.html  app.js  build.js  (+11 more)
(+127 files in other folders)
